package app.entities;

public class Treatment {
}
