package app.persistence.documentCreation;

public class MailSender {
}
