package app.persistence.documentCreation;

public class SVGgenerator {
}
