package app.persistence.mappers;

public class PriceAndMaterialMapper {
}
